--- a/template/package.json
+++ b/template/package.json
@@ -29,7 +29,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-i18next": "^15.0.1",
-    "react-native": "0.75.2",
+    "react-native": "0.77.1",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-localize": "^3.2.1",
@@ -45,13 +45,17 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.2",
-    "@react-native/eslint-config": "0.75.2",
-    "@react-native/metro-config": "0.75.2",
-    "@react-native/typescript-config": "0.75.2",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.77.1",
+    "@react-native/eslint-config": "0.77.1",
+    "@react-native/metro-config": "0.77.1",
+    "@react-native/typescript-config": "0.77.1",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
